# homework

./: .gitignore  README.md  main.py  pyproject.toml  readme.md  readme1.md  requirements.txt
data/: mylog.txt  operations_short.json  test_operations.json  weather_city.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_get_csv_xls_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
log/: mylog.txt
logs/: mylog.txt
src/: config.py  decorators.py  dz12.py  external_api.py  generators.py  get_csv_xls.py  list_operations.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_function.py  test_generators.py  test_get scv_xls.py  test_get_csv_xls.py  test_list_opertaion.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
